<resources>
    <string name="app_name">日词</string>

    <string name="skip">跳过</string>
    <string name="permission">请点击按钮授予读写权限</string>

    <string name="navigation_drawer_open">打开导航栏</string>
    <string name="navigation_drawer_close">关闭导航栏</string>

    <string name="action_settings">设置</string>

    <string name="confirm_exit">再按一次退出程序</string>

    <string name="ok">确认</string>
    <string name="cancel">取消</string>

    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="save_success">保存成功</string>

    <string name="loading">加载中……</string>
    <string name="success">成功</string>
    <string name="failure">加载失败</string>
    <string name="no_data">无相关数据</string>

    <string name="network_error">网络连接失败</string>

    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="nickname">昵称</string>
    <string name="nickname_hint">请输入昵称</string>
    <string name="nickname_empty">请输入昵称</string>
    <string name="username">帐号</string>
    <string name="username_hint">用户名/手机号</string>
    <string name="username_empty">请输入帐号</string>
    <string name="password">密码</string>
    <string name="password_confirm">确认</string>
    <string name="password_hint">请输入登录密码</string>
    <string name="password_confirm_hint">请确认登录密码</string>
    <string name="password_different">两次输入密码不一致</string>
    <string name="password_empty">请输入密码</string>
    <string name="register">注册</string>
    <string name="register_hint">新用户？立即注册</string>
    <string name="forget_password">忘记密码？</string>

    <string name="login_success">登录成功</string>
    <string name="username_error">用户不存在</string>
    <string name="password_error">密码错误</string>

    <string name="register_success">注册成功</string>
    <string name="username_exist">该用户名已被注册</string>
    <string name="nickname_exist">该昵称已被注册</string>

    <string name="not_loggedin">请重新登录</string>

    <string name="logo">logo</string>

    <string name="add_sign">+</string>
    <string name="colon">：</string>

    <string name="add">添加</string>
    <string name="add_success">添加成功</string>
    <string name="add_failure">添加失败</string>

    <string name="update">更新</string>
    <string name="update_success">更新成功</string>
    <string name="update_failure">更新失败</string>

    <string name="delete">删除</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failure">删除失败</string>

    <string name="sync">同步</string>
    <string name="sync_success">同步完成</string>
    <string name="sync_failure">同步失败</string>

    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">天</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>
    <string name="second">秒</string>

    <string name="upend">倒放</string>
    <string name="pause">暂停</string>
    <string name="play">正放</string>

    <string name="choose_album">选择目录</string>
    <string name="choose_photo">选择图片</string>

    <string name="remember">记住了</string>
    <string name="forget">没记住</string>
    <string name="remember_forever">彻底记住</string>
    <string name="check_answer">查看答案</string>

    <string name="search">筛选</string>
    <string name="operation">操作</string>
    <string name="export">导出</string>
    <string name="sort">排序</string>

    <string name="id">ID</string>
    <string name="writing">写法</string>
    <string name="pronunciation">发音</string>
    <string name="meaning">解释</string>
    <string name="tone">音调</string>
    <string name="type">类型</string>
    <string name="part_of_speech">词性</string>
    <string name="score">分数</string>

    <string name="text">文本</string>
    <string name="format">格式</string>
    <string name="import_tango">导入</string>

    <string name="add_error">写法和发音不能同时为空</string>

    <string name="goal">每日目标</string>

    <string name="change">更改</string>
    <string name="choose_file">选择文件</string>

    <string name="test_text">测试文本</string>
    <string name="speak_test">音色测试</string>

    <string name="switch_service">开启/关闭服务</string>

    <string name="mission_mode">任务模式</string>
    <string name="test_mode">测试模式</string>

    <string name="check_in">打卡签到</string>

    <string name="typewriter">写字板</string>

    <string name="kuromoji">分析句子</string>

</resources>
