<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_check_in"
       android:orderInCategory="96"
        android:title="@string/check_in"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_test"
        android:orderInCategory="97"
        android:title="@string/test_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mission"
        android:orderInCategory="98"
        android:title="@string/mission_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_switch_service"
        android:orderInCategory="99"
        android:title="@string/switch_service"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
