<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".module.crud.AddTangoActivity">

    <include layout="@layout/tool_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/writingView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/writing"
                android:textSize="32sp" />

            <EditText
                android:id="@+id/pronunciationView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/writingView"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/pronunciation"
                android:textSize="32sp" />

            <EditText
                android:id="@+id/meaningView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pronunciationView"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/meaning"
                android:textSize="32sp" />

            <EditText
                android:id="@+id/toneView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/meaningView"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/tone"
                android:inputType="number"
                android:textSize="32sp" />

            <EditText
                android:id="@+id/partOfSpeechView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toneView"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/part_of_speech"
                android:textSize="32sp" />

            <EditText
                android:id="@+id/typeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/partOfSpeechView"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/type"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btnAddTango"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/typeView"
                android:layout_marginTop="50dp"
                android:text="@string/add" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>
