<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".module.importtango.ImportTangoActivity">

    <include layout="@layout/tool_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:hint="@string/text"
                android:textSize="32sp" />

            <EditText
                android:id="@+id/edit_format"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_text"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:hint="@string/format"
                android:textSize="32sp" />

            <EditText
                android:id="@+id/edit_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_format"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:hint="@string/type"
                android:textSize="32sp" />

            <LinearLayout
                android:id="@+id/layout_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_type"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/writing" />

                <EditText
                    android:id="@+id/edit_writing_index"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pronunciation" />

                <EditText
                    android:id="@+id/edit_pronunciation_index"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meaning" />

                <EditText
                    android:id="@+id/edit_meaning_index"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_import_tango"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_picker"
                android:layout_marginTop="50dp"
                android:text="@string/import_tango" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>
