<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E3EDCD"
    tools:context="com.xmx.tango.Fragments.HomeFragment">

    <TextView
        android:id="@+id/tv_tango_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_tango_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="right"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/layout_tango"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_tango_pronunciation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/tv_tango_tone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_tango_writing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="42sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_tango_part"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/tv_tango_meaning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bottom_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/btn_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/check_answer"
            android:textColor="#000000"
            android:textSize="36sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_remember"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/remember"
                android:textColor="#000000"
                android:textSize="36sp" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/btn_forget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/forget"
                android:textColor="#000000"
                android:textSize="36sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
